--- a/polls/templates/polls/details.html
+++ b/polls/templates/polls/details.html
@@ -1,1 +1,10 @@
-<li><a href="{% url 'polls:details' question.id %}">{{ question.question_text }}</a></li>
+{% extends "./base.html" %}
+
+{% block title %}My amazing blog{% endblock %}
+
+{% block content %}
+{% for entry in blog_entries %}
+<h2>{{ entry.title }}</h2>
+<p>{{ entry.body }}</p>
+{% endfor %}
+{% endblock %}
