--- a/polls/templates/polls/details.html
+++ b/polls/templates/polls/details.html
@@ -1,10 +1,8 @@
 {% extends "./base.html" %}
+{% block title %}Qustion {{question.id}} detials{% endblock %}
 
-{% block title %}My amazing blog{% endblock %}
 
 {% block content %}
-{% for entry in blog_entries %}
-<h2>{{ entry.title }}</h2>
-<p>{{ entry.body }}</p>
-{% endfor %}
+<h1>{{question.question_text}}</h1>
+<p>{{question.pub_date}}</p>
 {% endblock %}
