--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,10 +1,11 @@
 {% extends "./base.html" %}
 
-{% block title %}My amazing blog{% endblock %}
+{% block title %}Latest Questions Index{% endblock %}
 
 {% block content %}
-{% for entry in blog_entries %}
-<h2>{{ entry.title }}</h2>
-<p>{{ entry.body }}</p>
-{% endfor %}
+<ul>
+    {% for entry in latest_question_list %}
+    <li><a href="./{{entry.id}}">{{ entry.question_text }}<a></li>
+    {% endfor %}
+</ul>
 {% endblock %}
