--- a/polls/templates/polls/base.html
+++ b/polls/templates/polls/base.html
@@ -29,6 +29,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/polls/">Polls</a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">Edit Profile</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Login</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
